Minor layout bug fix for the upload version of the sign-in page.

--- a/front-end/sign-in/styles.css
+++ b/front-end/sign-in/styles.css
@@ -1,5 +1,5 @@
 .pw-signin-page {
-  height: calc(100vh - 128px);
+  height: calc(100vh - 88px);
   display: flex;
   align-items: center;
   justify-content: center;
